# aryan-zaveri

./: .gitignore  README.md  SYSTEMS.md
.github/workflows/: ci.yml
architecture/: quant_systems_showcase.md  vajra-public-architecture.md
case-studies/: professional-experience.md  vajra.md
contracts/: execution_event.json  order_intent.json  portfolio_state.json  replay_summary.json  risk_contract.json  risk_decision.json  signal.json
evidence/: evidence-policy.md  public-evidence-register.md
examples/cpp_live_runtime_demo/: live_runtime_demo.cpp  risk_contract.json  sample_signals.json
examples/cpp_trading_runtime/: CMakeLists.txt
examples/cpp_trading_runtime/include/: blocking_queue.hpp  hot_state.hpp  journal.hpp  order_manager.hpp  risk_authority.hpp  runtime_types.hpp
examples/cpp_trading_runtime/src/: hot_state.cpp  journal.cpp  order_manager.cpp  risk_authority.cpp  trading_runtime_main.cpp
examples/python_research_system/: __init__.py  execution.py  features.py  market_data.py  metrics.py  portfolio.py  replay.py  reports.py  risk.py  run_system.py  signals.py  validation.py
examples/python_research_system/tests/: test_python_research_system.py
examples/research_to_execution_demo/: README.md  __init__.py  execution.py  features.py  market.py  metrics.py  replay.py  risk.py  run_demo.py  signals.py
examples/research_to_execution_demo/tests/: test_demo.py
resume/: README.md
tools/: check_public_repo.py  validate_contract_examples.py
